[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/videos/game_over.ogv" type="VideoStream" id=1]
[ext_resource path="res://assets/scripts/global/GameOverScreen.gd" type="Script" id=2]

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 1 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
margin_left = 280.0
margin_top = 344.0
margin_right = 528.0
margin_bottom = 376.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 808.0
margin_top = 344.0
margin_right = 1056.0
margin_bottom = 376.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
